# Doc-2-Quiz

./: .gitignore  LICENSE  README.md
backend/: .env.sample  main.py  pyproject.toml
backend/app/: main.py  server.py
backend/app/db/: database.py  schemas.py
backend/app/routes/: upload.py
backend/app/utils/: ocr.py
backend/tests/test_routes/: conftest.py  test_upload.py
backend/tests/test_utls/: test_ocr.py
frontend/: bun.lockb  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/quiz/[quizId]/: page.tsx
frontend/src/components/dashboard/: CreateSubjectDialog.tsx  QuizSetCard.tsx
frontend/src/services/: api.ts
