[project]
name = "doc-2-quiz"
version = "0.1.0"
description = "Backend of doc-2-quiz"
authors = [
    {name = "fateh",email = "fatehss@g.ucla.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "langgraph (>=0.3.6,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "starlette (>=0.46.1,<0.47.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "motor (>=3.7.0,<4.0.0)",
    "pydantic (>=2.11.1,<3.0.0)",
    "llama-index (>=0.12.27,<0.13.0)",
    "llama-parse (>=0.6.4.post1,<0.7.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
